# fast_car_api

./: alembic.ini  cars.db  pyproject.toml  requeriments.txt
alembic/: env.py
alembic/versions/: f8e5e6984f5d_create_cars_table.py
docs/: index.md
fast_car_api/: app.py  database.py  models.py  routers.py  schemas.py
